// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button switcher should be rendered correctly when active left 1`] = `
.c0 {
  background-color: #F65261;
  border: none;
  border-radius: 4px 0 0 4px;
  text-transform: uppercase;
  color: #FFFFFF;
  text-align: center;
  font-size: 12px;
  padding: 10px 20px;
  max-height: 40px;
}

<button
  className="c0"
>
  title1
</button>
`;

exports[`Button switcher should be rendered correctly when inactive right 1`] = `
.c0 {
  background-color: #424242;
  border: none;
  border-radius: 0 4px 4px 0;
  text-transform: uppercase;
  color: #FFFFFF;
  text-align: center;
  font-size: 12px;
  padding: 10px 20px;
  max-height: 40px;
}

<button
  className="c0"
>
  title2
</button>
`;
